# circle

./: .coveragerc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  castle.yaml  coverage.json  info.json  pyproject.toml  requirements.txt  setup.py  stair_data.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: get-coverage-codacy.yml  greetings.yml  tests.yml
admin/markdown/: todo.md
admin/queue/: docs_errors.md
admin/scripts/: clear_logs.py  coverage.py  new_here.py  pre-commit  update_todo.py
admin/social/: logo.pptx
admin/style/: python.md
docs/: index.html
docs/css/: landing-page.css  nav.css  style.css
docs/error/: errors.css
docs/js/: nav.js
docs/templates/: nav.html
easyneuron/: __init__.py
easyneuron/_classes/: __init__.py  _models.py  layers.py  models.py
easyneuron/_logging/: __init__.py  logging.py
easyneuron/_testutils/: __init__.py  gh_actions.py  logger.py
easyneuron/agents/: __init__.py
easyneuron/data/: __init__.py  cloud.py  gen.py  load.py
easyneuron/exceptions/: __init__.py  exceptions.py
easyneuron/genetic/: __init__.py
examples/: kNN.py
sandboxai/: __init__.py
tests/: __init__.py  test_agents.py  test_agents_envs.py  test_base_classes.py  test_data.py  test_dbscan.py  test_genetic.py  test_knearest.py  test_knn.py  test_log.py  test_logging.py  test_math.py  test_maths.py  test_metrics.py  test_neighbours.py  test_neuron_activations.py  test_neuron_layers.py
(+109 files in other folders)
