[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "circleai"
version = "0.0.1"
authors = [
  { name="SamTheProgrammer", email="user@example.com" },
]
description = "A machine learning library for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tetrahedronai/circle"
"Bug Tracker" = "https://github.com/tetrahedronai/circle/issues"